# PythonLeaveManagementCLI

./: .gitignore  pyproject.toml  requirements.txt
src/: Application.py  application.py  database.db  main.py  sample.txt
src/auth/: authentication.py
src/aws_services/sqs/: sqs.py
src/constants/: constants.py
src/data/: Credentals.py  Employee.py
src/db/: Connector.py  Employee.py  crud_operations.py
src/exceptions/: exceptions.py
src/factory/: factory.py
src/lms/model/: model.py
src/model/: dbOperations.py
src/utils/: adapter.py  admin.py  developers.py  features.py  magging.py  manager.py  mapping.py  static_methods.py  unauthorised.py
src/validators/: validate.py
tests/: test_login.py
