[tool.poetry]
name = "lms"
version = "0.1.0"
description = "Leave Management System"
authors = ["Tarkeshwar Kumar"]
readme = "README.md"
packages = [{include = "lms", from = "src"}]
include = ["src"]
exclude = ["src/**/*.pyc","__pycache__"]

[tool.poetry.dependencies]
python = "^3.10"
SQLAlchemy = "2.0.29"
clint = "0.5.1"
pyfiglet = "1.0.2"
pytest = "^8.1.1"
black = "^24.4.0"
flake8 = "^7.0.0"
mypy = "^1.9.0"
pytest-cov = "^5.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
mypy_path = "src"
check_untyped_defs = true
disallow_any_generics = false
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true
warn_unreachable = true
no_implicit_reexport = true

[tool.flake8]
max-line-length = 150